--- a/content/process/index.mdx
+++ b/content/process/index.mdx
@@ -2,8 +2,6 @@
 title: Prozess
 ---
 
-## Noch keine Inhalte
+## Offizielle Seite des BSI zum Thema
 
-Fragen rund um den Prozess der Erlangung eines TR Zertifikates werden hier auffindbar sein.
-
-Meldet euch einfach per Issue unter [github.com/awesome-diga](https://github.com/awesome-diga/tr-faq).
+[FAQ des BSI zum Thema](https://www.bsi.bund.de/DE/Themen/Unternehmen-und-Organisationen/Standards-und-Zertifizierung/Technische-Richtlinien/TR-nach-Thema-sortiert/tr03161/TR-03161-FAQ/FAQ-TR-03161_node.html)
