--- a/content/legal.mdx
+++ b/content/legal.mdx
@@ -4,13 +4,17 @@ title: Legal
 
 # Impressum / Imprint
 
-Angaben gemäß § 5 TMG
+Angaben gemäß § 5 DDG
 
 ```
-TODO
+DigaHub
+c/o COCENTER
+Koppoldstr. 1
+86551 Aichach
 
 Contact:
 hello~at~digahub.dev
+tr.digahub.dev
 ```
 
 # Haftungsausschluss
@@ -38,7 +42,10 @@ Impressum vom impressum-generator.de der Kanzlei Hasselbach Rechtsanwälte
 Inhaltlich Verantwortlicher gemäß § 18 Abs. 2 MStV:
 
 ```
-TODO: Name + Adresse
+Eduard Thamm
+c/o COCENTER
+Koppoldstr. 1
+86551 Aichach
 ```
 
 ---
@@ -50,7 +57,10 @@ Diese Datenschutzerklärung klärt Sie über die Art, den Umfang und Zweck der V
 ## Verantwortlicher
 
 ```
-TODO: Name + Adresse
+Eduard Thamm
+c/o COCENTER
+Koppoldstr. 1
+86551 Aichach
 hello~at~digahub.dev
 ```
 
@@ -173,3 +183,7 @@ Wir setzen innerhalb unseres Onlineangebotes auf Grundlage unserer berechtigten 
 Dies setzt immer voraus, dass die Drittanbieter dieser Inhalte, die IP-Adresse der Nutzer wahrnehmen, da sie ohne die IP-Adresse die Inhalte nicht an deren Browser senden könnten. Die IP-Adresse ist damit für die Darstellung dieser Inhalte erforderlich. Wir bemühen uns nur solche Inhalte zu verwenden, deren jeweilige Anbieter die IP-Adresse lediglich zur Auslieferung der Inhalte verwenden. Drittanbieter können ferner so genannte Pixel-Tags (unsichtbare Grafiken, auch als “Web Beacons” bezeichnet) für statistische oder Marketingzwecke verwenden. Durch die “Pixel-Tags” können Informationen, wie der Besucherverkehr auf den Seiten dieser Website ausgewertet werden. Die pseudonymen Informationen können ferner in Cookies auf dem Gerät der Nutzer gespeichert werden und unter anderem technische Informationen zum Browser und Betriebssystem, verweisende Webseiten, Besuchszeit sowie weitere Angaben zur Nutzung unseres Onlineangebotes enthalten, als auch mit solchen Informationen aus anderen Quellen verbunden werden.
 
 Erstellt mit Datenschutz-Generator.de von RA Dr. Thomas Schwenke
+
+# Language Note
+
+This page is only available in German as it mainly exists to address legal requirements within this jurisdiction.
