Start minor translations

--- a/content/en/index.mdx
+++ b/content/en/index.mdx
@@ -4,30 +4,28 @@ title: " "
 
 # BSI DiGA TR-03161 Questions and Answers
 
-Diese Knowledge Base dient der strukturierten und transparenten Sammlung von Informationen, häufig gestellten Fragen (FAQs),
-etablierten Good Practices und anerkannten Vorgehensweisen rund um das Verfahren des Bundesamts für Sicherheit in der
-Informationstechnik (BSI) im Kontext digitaler Gesundheitsanwendungen (DiGA).
+This knowledge base serves as a structured and transparent collection of information, frequently asked questions (FAQs),
+established good practices, and recognized procedures related to the Federal Office for Information Security (BSI) procedures in the context of digital health applications (DiGA).
 
-## Hintergrund
+## Background
 
-Die aktuelle Kommunikation zwischen Herstellern von DiGA und Prüfinstituten und dem BSI erfolgt überwiegend individuell
-per E-Mail. Dies führt zu redundanter Kommunikation, Informationsverlust und mangelnder Transparenz.
+Current communication between DiGA manufacturers and testing institutes and the BSI takes place primarily individually
+via email. This leads to redundant communication, loss of information, and a lack of transparency.
 
-## Zielsetzung
+## Objective
 
-Ziel dieser Knowledge Base ist es, zentrale Informationen und bewährte Verfahren öffentlich zugänglich zu dokumentieren,
-um Herstellern und Prüfinstituten eine effiziente und transparente Informationsquelle zu bieten.
+The goal of this knowledge base is to document central information and best practices in a publicly accessible manner in order to provide manufacturers and testing institutes with an efficient and transparent source of information.
 
-## Umsetzung
+## Implementation
 
-- Inhalte werden als Markdown-Dokumente in einem GitHub-Repository verwaltet.
-- Beteiligte können eigenständig Inhalte beitragen oder Änderungen vorschlagen.
-- Die finale Integration der Inhalte erfolgt durch ein dediziertes Team mit Merge-Rechten.
-- Die Inhalte werden ebenfalls über eine statisch generierte Webseite zur Verfügung gestellt, um die Zugänglichkeit zu erhöhen.
+- Content is managed as Markdown documents in a GitHub repository.
+- Participants can independently contribute content or suggest changes.
+- The final integration of the content is carried out by a dedicated team with merge rights.
+- The content is also made available via a statically generated website to increase accessibility.
 
-## Beteiligungsmöglichkeit
+## Participation Opportunities
 
-Interessierte können direkt im GitHub-Repository neue Inhalte beitragen oder bestehende Inhalte ergänzen und verbessern.
-Zum Beispiel über den auf jeder Seite rechts vorhandenen "Edit this page on GitHub" Link.
+Interested parties can contribute new content directly to the GitHub repository or add to and improve existing content.
+For example, via the "Edit this page on GitHub" link on the right side of every page.
 
-Für größere Änderungen oder Code-Contributions geht es hier um Repository: [github.com/awesome-diga](https://github.com/awesome-diga/tr-faq).
+For larger changes or code contributions, please refer to the repository: [github.com/awesome-diga](https://github.com/awesome-diga/tr-faq).
