Add first draft of contributing file

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -27,7 +27,9 @@ um Herstellern und Prüfinstituten eine effiziente und transparente Informations
 
 ## Beteiligungsmöglichkeit
 
-Interessierte können direkt im GitHub-Repository neue Inhalte beitragen oder bestehende Inhalte ergänzen und verbessern.
+Details, zu den Beitragsmöglichkeiten und wie an Diskussionen rund um das Thema teilgenommen werden kann, finden sich [auf GitHub](https://github.com/awesome-diga/tr-faq/blob/main/CONTRIBUTING.md).
+
+Interessierte können unter anderem direkt im GitHub-Repository neue Inhalte beitragen oder bestehende Inhalte ergänzen und verbessern.
 Zum Beispiel über den auf jeder Seite rechts vorhandenen "Edit this page on GitHub" Link.
 
 Für größere Änderungen oder Code-Contributions geht es hier um Repository: [github.com/awesome-diga](https://github.com/awesome-diga/tr-faq).
